fix initial iframe width for `uk-responsive` which caused an expanded viewport on iOS devices

--- a/src/less/components/utility.less
+++ b/src/less/components/utility.less
@@ -242,6 +242,12 @@
     max-width: none;
 }
 
+/*
+ * Fix initial iframe width. Without the viewport is expanded on iOS devices
+ */
+
+[uk-responsive] { max-width: 100%; }
+
 
 /* Border
  ========================================================================== */
